# LetDX

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: build.yml  ci.yml  container.yml  test.yml
LetDB/: CMakeLists.txt  LICENSE
LetDB/include/let/: account.h  cli.h  common.h  error.h  guard.h  let.h  log.h  state.h
LetDB/include/let/network/: request.h  response.h  server.h
LetDB/include/let/network/request/: decoder.h  request.h
LetDB/include/let/network/response/: encoder.h  response.h
LetDB/include/let/storage/: crc.h  wal.h
LetDB/src/: account.c  cli.c  error.c  guard.c  let.c  log.c  main.c  state.c
LetDB/src/network/: request.c  response.c  server.c
LetDB/src/network/request/: decoder.c  request.c
LetDB/src/network/response/: encoder.c  response.c
LetDB/src/storage/: crc.c  wal.c
LetDB/tests/: CMakeLists.txt  account.c  guard.c  state.c
LetDB/tests/network/: request.c  response.c  server.c
LetDB/tests/storage/: crc.c
LetDD/: CMakeLists.txt  cli.go  go.mod  go.sum  main.go  thing.go
LetDD/config/: config.go  parser.go
LetDD/http/: authorization.go  flags.go  ratelimit.go  ratelimiter.go  request.go  response.go  routes.go  server.go
LetDD/src/: main.zig
LetDD/supervisor/: supervisor.go  supervisor_test.go
LetDD/tcp/: client.go  command.go  command_test.go  request.go  request_test.go  response.go  response_test.go
LetDD/uint128/: uint128.go  uint128_test.go
docs/: LETDB.md  LETDD.md  OVERVIEW.md
include/: account.h  common.h  guard.h  network.h  state.h
include/let/: account.h  common.h  error.h  guard.h  let.h  state.h
include/let/network/: request.h  response.h  server.h
include/let/storage/: crc.h  wal.h
include/network/: parser.h  protocol.h  request.h  response.h  server.h
src/: account.c  cli.c  error.c  guard.c  let.c  main.c  network.c  state.c
src/network/: parser.c  protocol.c  request.c  response.c  server.c
src/storage/: crc.c  wal.c
